--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
   button {
     padding: 12px 24px;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 14px;
     background-color: #219FFF;
     border: none;
     border-radius: 6px;
@@ -74,6 +74,10 @@ body {
   }
   
   #deleteButton{
+    background-color: red;
+  }
+
+  #deleteButtonCard{
     background-color: red;
   }
 
@@ -115,6 +119,8 @@ body {
     border-radius: 10px;
     box-sizing: border-box; 
     cursor: pointer;
+    transform-style: preserve-3d;
+    transition: transform 0.7s ease;
   }
 
   .card:hover{
@@ -125,12 +131,18 @@ body {
   .card.active{
     background-color: #219FFF;
     transform: rotateX(90);
+    transform: rotateY(180deg);
+  }
+
+  .back{
+    transform: rotateY(180deg);
   }
 
   label.back {
     color: rgb(255, 255, 255); 
     font-family: Arial, sans-serif;
     font-size: 1.5rem; 
+    
   }
   label.front {
     color: #000; 
